--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,11 @@
     "compilerOptions": {
         "module": "commonjs",
         "moduleResolution": "node",
-        "target": "es2017",
+        "target": "es2018",
+        "lib": [
+            "es2018",
+            "esnext.asynciterable"
+        ],
         "outDir": "./build",
         "sourceMap": true,
         "strict": true,
