--- a/package.json
+++ b/package.json
@@ -22,10 +22,9 @@
     "typescript": "^5.0.2"
   },
   "scripts": {
-    "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1",
     "start:watch": "nodemon --watch src --exec ts-node src/index.ts | pino-pretty",
-    "start": "ts-node build/index.js | pino-pretty"
+    "start": "ts-node src/index.ts | pino-pretty"
   },
   "repository": {
     "type": "git",
