--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,7 @@
             "@helpers/*": ["helpers/*"],
             "@types/*": ["types/*"],
             "@middlewares/*": ["middlewares/*"],
+            "@constants/*": ["constants/*"],
         },
     },
     "include": [
