--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@koa/cors": "^4.0.0",
     "@koa/router": "^12.0.0",
     "dotenv": "^16.0.3",
+    "fastest-validator": "^1.16.0",
     "koa": "^2.14.1",
     "koa-bodyparser": "^4.4.0",
     "pino": "^8.11.0",
