chore: changing folder name and structure

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,7 @@
         "paths": {
             "@config/*": ["config/*"],
             "@helpers/*": ["helpers/*"],
-            "@types/*": ["types/*"],
+            "@interface/*": ["interface/*"],
             "@middlewares/*": ["middlewares/*"],
             "@constants/*": ["constants/*"],
         },
