--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@koa/cors": "^4.0.0",
     "@koa/router": "^12.0.0",
+    "@prisma/client": "^4.12.0",
     "dotenv": "^16.0.3",
     "fastest-validator": "^1.16.0",
     "koa": "^2.14.1",
@@ -19,6 +20,7 @@
     "@types/koa__cors": "^4.0.0",
     "@types/koa__router": "^12.0.0",
     "nodemon": "^2.0.22",
+    "prisma": "^4.12.0",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.1.2",
     "typescript": "^5.0.2"
