--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start:watch": "nodemon --watch src --exec ts-node src/index.ts | pino-pretty",
-    "start": "ts-node src/index.ts | pino-pretty"
+    "start": "ts-node src/index.ts | pino-pretty",
+    "build": "tsc"
   },
   "repository": {
     "type": "git",
