--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
   },
   "devDependencies": {
     "@types/koa": "^2.13.6",
-    "@types/koa-bodyparser": "^4.3.10",
     "@types/koa__cors": "^4.0.0",
     "@types/koa__router": "^12.0.0",
+    "@types/koa-bodyparser": "^4.3.10",
     "nodemon": "^2.0.22",
+    "pre-commit": "^1.2.2",
+    "rimraf": "^5.0.0",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.1.2",
     "typescript": "^5.0.2"
@@ -27,7 +29,9 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start:watch": "nodemon --watch src --exec ts-node src/index.ts | pino-pretty",
     "start": "ts-node src/index.ts | pino-pretty",
-    "build": "tsc"
+    "build": "rimraf build && tsc",
+    "ts.check": "tsc --project tsconfig.json",
+    "add-build": "git add build"
   },
   "repository": {
     "type": "git",
@@ -38,5 +42,10 @@
   "bugs": {
     "url": "https://github.com/caturbgs/boiletplate-koajs/issues"
   },
-  "homepage": "https://github.com/caturbgs/boiletplate-koajs#readme"
+  "homepage": "https://github.com/caturbgs/boiletplate-koajs#readme",
+  "pre-commit": [
+    "ts.check",
+    "build",
+    "add-build"
+  ]
 }
