chore: change package and tsconfig files

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,11 +2,11 @@
     "compilerOptions": {
         "module": "commonjs",
         "moduleResolution": "node",
-        "target": "es2018",
-        "lib": [
-            "es2018",
-            "esnext.asynciterable"
-        ],
+        "target": "es6",
+//        "lib": [
+//            "es6",
+//            "esnext.asynciterable"
+//        ],
         "outDir": "./build",
         "sourceMap": true,
         "strict": true,
