--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start:watch": "nodemon --watch src --exec ts-node src/index.ts | pino-pretty",
-    "start": "ts-node src/index.ts | pino-pretty",
+    "start": "nodemon src/index.ts",
     "build": "rimraf build && tsc",
     "ts.check": "tsc --project tsconfig.json",
     "add-build": "git add build"
