chore: change vercel config again

--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,7 @@
   "name": "boilerplate-koajs",
   "builds": [
     {
-      "src": "build/index.js",
+      "src": "./build/index.js",
       "use": "@vercel/node",
       "config": {
         "includeFiles": [
@@ -15,7 +15,7 @@
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "build/index.js"
+      "dest": "/build/index.js"
     }
   ]
 }
